--- a/css/styles.css
+++ b/css/styles.css
@@ -1,10 +1,59 @@
-#header, #footer, #main {
+.clearfix, #header, #footer, #main, .form-item, .messages, .tasks, ul.tabs, .block-search .container-inline, .search-form .container-inline {
   *zoom: 1;
 }
-#header:after, #footer:after, #main:after {
+.clearfix:after, #header:after, #footer:after, #main:after, .form-item:after, .messages:after, .tasks:after, ul.tabs:after, .block-search .container-inline:after, .search-form .container-inline:after {
   content: "";
   display: table;
   clear: both;
+}
+
+.inline-block, label.option, .action-links li:first-child, .action-links li.first, .action-links a, .pager a, .block-search .container-inline, .search-form .container-inline {
+  display: -moz-inline-stack;
+  display: inline-block;
+  vertical-align: middle;
+  *vertical-align: auto;
+  zoom: 1;
+  *display: inline;
+}
+
+.disabled {
+  cursor: not-allowed;
+  opacity: 0.5;
+}
+
+.visually-hidden, .actions-single h2 {
+  border: 0;
+  clip: rect(0 0 0 0);
+  height: 1px;
+  margin: -1px;
+  overflow: hidden;
+  padding: 0;
+  position: absolute;
+  width: 1px;
+}
+
+.focusable:active, .focusable:focus {
+  clip: auto;
+  height: auto;
+  margin: 0;
+  overflow: visible;
+  position: static !important;
+  width: auto;
+}
+
+.hidden {
+  display: none !important;
+  visibility: hidden;
+}
+
+.hide-text, .actions-multiple h2, .block-search input.form-submit, .search-form input.form-submit {
+  text-indent: -119988px;
+  overflow: hidden;
+  text-align: left;
+}
+
+.base-sprite {
+  background: url('../img/base-s8b859ec3e1.png') no-repeat;
 }
 
 .container {
@@ -25,61 +74,44 @@
 fieldset {
   border: none;
   padding: 0;
-  margin: 0 0 1em 0;
+  margin: 1em 0;
 }
 
-legend {
+legend, label {
   font-weight: bold;
 }
 
 label {
   display: block;
-  font-weight: bold;
 }
 label.option {
   font-weight: normal;
-  display: -moz-inline-box;
-  -moz-box-orient: vertical;
-  display: inline-block;
-  vertical-align: middle;
-  *vertical-align: auto;
-}
-label.option {
-  *display: inline;
 }
 
-.form-control {
-  *zoom: 1;
+.form-item {
   margin: 1em 0;
   position: relative;
 }
-.form-control:after {
-  content: "";
-  display: table;
-  clear: both;
+td .form-item {
+  margin-top: 0;
+  margin-bottom: 0;
 }
-td .form-control {
-  margin: 0;
+
+.form-text, .form-textarea, .form-password {
+  border: solid 1px #eeeeee;
+  padding: 0.5em;
 }
 
 .form-text,
 .form-textarea,
 .form-password,
 .form-select {
-  border: solid 1px #dddddd;
   max-width: 100%;
-}
-
-.form-text,
-.form-textarea,
-.form-password {
-  padding: 0.375em;
 }
 
 .form-item .description {
   color: #585858;
-  font-size: 0.923em;
-  margin-top: 4px;
+  margin-top: 0.5em;
 }
 
 .form-actions {
@@ -96,16 +128,10 @@ input[disabled] + label {
 }
 
 .messages {
-  *zoom: 1;
   background-color: #bedb82;
-  line-height: 1.6;
   border-bottom: solid 1px rgba(137, 179, 51, 0.8);
+  line-height: 1.6;
   padding: 20px;
-}
-.messages:after {
-  content: "";
-  display: table;
-  clear: both;
 }
 .messages + .messages {
   border-top: none;
@@ -138,7 +164,7 @@ input[disabled] + label {
   position: relative;
   min-height: 32px;
 }
-.tasks * html .tasks {
+* html .tasks {
   height: 32px;
 }
 
@@ -207,7 +233,8 @@ ul.primary {
 }
 
 ul.secondary {
-  font-size: 0.923em;
+  font-size: 12px;
+  font-size: 0.75rem;
   padding: 1em 0;
 }
 
@@ -254,35 +281,21 @@ ul.action-links:hover {
   margin: 0;
   padding: 0 8px 0 0;
 }
-.action-links li:first-child, .action-links li.first {
-  display: inline-block;
-}
 .action-links:hover li, .active .action-links {
   display: block;
   margin-bottom: 4px;
 }
 .action-links a {
-  display: -moz-inline-box;
-  -moz-box-orient: vertical;
-  display: inline-block;
-  vertical-align: middle;
-  *vertical-align: auto;
   padding: 4px 0;
 }
 .action-links a, .action-links a:visited {
   color: white;
-}
-.action-links a {
-  *display: inline;
 }
 
 .actions-multiple:hover {
   border-radius: 4px;
 }
 .actions-multiple h2 {
-  text-indent: 110%;
-  white-space: nowrap;
-  overflow: hidden;
   background: inherit url("../img/icon/white/select.png") no-repeat 50% 50%;
   margin: 0;
   padding: 0;
@@ -297,13 +310,12 @@ ul.action-links:hover {
 }
 
 ul.pager {
-  border-radius: 3px;
+  overflow: hidden;
+  *zoom: 1;
   line-height: 2;
   list-style: none;
   margin: 1em 0;
   padding-left: 0;
-  overflow: hidden;
-  *zoom: 1;
 }
 
 .pager li {
@@ -322,37 +334,15 @@ ul.pager {
 }
 .pager a {
   text-decoration: none;
-  display: -moz-inline-box;
-  -moz-box-orient: vertical;
-  display: inline-block;
-  vertical-align: middle;
-  *vertical-align: auto;
-}
-.pager a {
-  *display: inline;
 }
 
 .block-search, .search-form {
   text-align: center;
 }
 .block-search .container-inline, .search-form .container-inline {
-  *zoom: 1;
-  display: -moz-inline-box;
-  -moz-box-orient: vertical;
-  display: inline-block;
-  vertical-align: middle;
-  *vertical-align: auto;
   position: relative;
   width: 100%;
   max-width: 320px;
-}
-.block-search .container-inline:after, .search-form .container-inline:after {
-  content: "";
-  display: table;
-  clear: both;
-}
-.block-search .container-inline, .search-form .container-inline {
-  *display: inline;
 }
 .block-search input.form-text, .search-form input.form-text {
   float: left;
@@ -365,9 +355,6 @@ ul.pager {
   margin: 0;
   padding: 0;
   border: 0;
-  text-indent: 110%;
-  white-space: nowrap;
-  overflow: hidden;
   border: none;
   height: 32px;
   width: 32px;
@@ -385,9 +372,15 @@ ul.pager {
   top: 1.231em;
 }
 
+html {
+  font-size: 16px;
+  font-size: 100%;
+}
+
 body {
   font-family: Helvetica, arial, sans-serif;
-  font-size: 100%;
+  font-size: 13px;
+  font-size: 0.8125rem;
   line-height: 1.4;
   padding: 0;
   margin: 0;
@@ -396,7 +389,8 @@ body {
 
 pre, code, kbd, samp {
   font-family: Monaco, monospace, serif;
-  font-size: 0.875em;
+  font-size: 11px;
+  font-size: 0.6875rem;
 }
 
 a, a:visited {
@@ -425,8 +419,8 @@ thead {
 td, th {
   border-width: 0 1px 1px 0;
   padding: 6px;
-  vertical-align: top;
   text-align: left;
+  vertical-align: top;
 }
 
 th {
@@ -437,51 +431,48 @@ td {
   border-color: #eeeeee;
 }
 
-h1, h2, h3, h4, h5, h6 {
+h1, h2, h3, h4, dt, h5, h6 {
   font-weight: 400;
   line-height: 1;
   padding: 0;
 }
 
 h1 {
-  font-size: 2.25em;
+  font-size: 36px;
+  font-size: 2.25rem;
 }
 
 h2 {
-  font-size: 1.875em;
+  font-size: 30px;
+  font-size: 1.875rem;
 }
 
 h3 {
-  font-size: 1.5em;
+  font-size: 24px;
+  font-size: 1.5rem;
 }
 
-h4 {
-  font-size: 1.25em;
+h4, dt {
+  font-size: 20px;
+  font-size: 1.25rem;
 }
 
-h5, h6 {
-  font-size: 1em;
+h5 {
+  font-size: 16px;
+  font-size: 1rem;
 }
 
-ul, ol {
-  *zoom: 1;
-  list-style: none;
-  margin: 0;
-  padding: 0;
-}
-ul:after, ol:after {
-  content: "";
-  display: table;
-  clear: both;
+h6 {
+  font-size: 14px;
+  font-size: 0.875rem;
 }
 
 dt {
-  font-size: 1.077em;
   margin-top: 1em;
 }
 
 .submitted {
-  color: #777777;
+  color: #585858;
   margin: 1em 0;
 }
 
