--- a/sass/drupal/_jquery-ui.core.sass
+++ b/sass/drupal/_jquery-ui.core.sass
@@ -12,21 +12,21 @@
 //------------------------------------------------------------------------------
 
 .ui-helper-hidden
-  +hidden
+  @extend .hidden
 
 .ui-helper-hidden-accessible
-  +visually-hidden
+  @extend .visually-hidden
 
 .ui-helper-reset
   +reset-box-model
   +no-bullets
-  font-size: 100%
-  line-height: 1.3
+  +font-size
+  line-height: $line-height
   outline: 0
   text-decoration: none
 
 .ui-helper-clearfix
-  +pie-clearfix
+  @extend .clearfix
 
 .ui-helper-zfix
   width: 100%
@@ -41,7 +41,7 @@
 //------------------------------------------------------------------------------
 
 .ui-state-disabled
-  cursor: default !important
+  cursor: not-allowed !important
 
 
 // Icons
@@ -50,7 +50,7 @@
 .ui-icon
   background-repeat: no-repeat
   display: block
-  +hide-text
+  @extend .hide-text
 
 
 // Misc Visuals
