--- a/sass/drupal/_pagers.sass
+++ b/sass/drupal/_pagers.sass
@@ -1,14 +1,13 @@
 ul.pager
-  border-radius: 3px
+  +clearfix
   line-height: 2
   list-style: none
   margin: 1em 0
   padding-left: 0
-  +clearfix
 
 .pager
   li
-    border: solid 1px #eee
+    border: solid 1px $border
     border-left-width: 0
     float: left
     list-style: none
@@ -21,4 +20,4 @@ ul.pager
     padding: 0 12px
   a
     text-decoration: none
-    +inline-block
+    @extend .inline-block
