--- a/sass/styles.sass
+++ b/sass/styles.sass
@@ -1,54 +1,53 @@
+@import base-theme
 
-@import base/base
-
-@import base/layout
-@import base/forms
-@import base/messages
-@import base/tabs
-@import base/pagers
-@import base/search
-
+@import layout/default
+@import general/forms
+@import drupal/messages
+@import drupal/tabs
+@import drupal/pagers
+@import drupal/search
 
 
-
-// General padding
+// General
 //---------------------------------------------------------------------------
 
+html
+  +base-font-size()
+
 body
-  font-family: Helvetica, arial, sans-serif
-  font-size: 100%
-  line-height: 1.4
+  font-family: $sans-serif
+  +font-size(13)
+  line-height: $line-height
   padding: 0
   margin: 0
   word-wrap: break-word
 
 pre, code, kbd, samp
-  font-family: Monaco, monospace, serif
-  font-size: 0.875em
+  font-family: $monospace
+  +font-size(11)
 
 a
   +link-colors($link, $hover, $active)
 
 
-
 // Tables
 //---------------------------------------------------------------------------
 table
-  width:  100%
+  width: 100%
 table, td, th
-  border: solid 1px #eee
+  border: solid 1px $border
   border-width: 1px 0 0 1px
 thead
   background-color: #f5f5f5
 td, th
   border-width: 0 1px 1px 0
   padding: 6px
-  vertical-align: top
   text-align: left
+  vertical-align: top
 th
   border-color: #ddd
 td
-  border-color:  #eee
+  border-color: $border
 
 
 // Headings
@@ -60,37 +59,32 @@ td
   padding: 0
 
 h1
-  font-size: 2.250em  // 36px
+  +font-size(36)
 h2
-  font-size: 1.875em  // 30px
+  +font-size(30)
 h3
-  font-size: 1.5em  // 24px
+  +font-size(24)
 h4
-  font-size: 1.25em  // 20px
-h5, h6
-  font-size: 1em  // 16px
+  +font-size(20)
+h5
+  +font-size(16)
+h6
+  +font-size(14)
 
 
 // Lists
 //---------------------------------------------------------------------------
 
-ul, ol
-  +pie-clearfix
-  list-style: none
-  margin: 0
-  padding: 0
-
 dt
-  font-size: 1.077em
+  @extend h4
   margin-top: 1em
-
 
 
 // Content
 //---------------------------------------------------------------------------
 
 .submitted
-  color: #777
+  color: $gray
   margin: 1em 0
 
 article
@@ -102,3 +96,10 @@ p
     margin-top: 0
   &:last-child
     margin-bottom: 0
+
+
+// Admin
+//---------------------------------------------------------------------------
+
+#toolbar-home
+  float: left
